--- a/metroid.cbp
+++ b/metroid.cbp
@@ -46,6 +46,8 @@
 		<Unit filename="engine.cpp" />
 		<Unit filename="engine.hpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="map.cpp" />
+		<Unit filename="map.hpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
