--- a/metroid.cbp
+++ b/metroid.cbp
@@ -48,6 +48,8 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="map.cpp" />
 		<Unit filename="map.hpp" />
+		<Unit filename="tools.cpp" />
+		<Unit filename="tools.hpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
