--- a/metroid.cbp
+++ b/metroid.cbp
@@ -45,6 +45,8 @@
 		</Linker>
 		<Unit filename="engine.cpp" />
 		<Unit filename="engine.hpp" />
+		<Unit filename="guiobj.cpp" />
+		<Unit filename="guiobj.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="map.cpp" />
 		<Unit filename="map.hpp" />
