--- a/metroid.cbp
+++ b/metroid.cbp
@@ -43,6 +43,8 @@
 		<Linker>
 			<Add directory="../../SFML-2.2/lib" />
 		</Linker>
+		<Unit filename="bullet.cpp" />
+		<Unit filename="bullet.hpp" />
 		<Unit filename="defs.hpp" />
 		<Unit filename="enemy.cpp" />
 		<Unit filename="enemy.hpp" />
